# Bookstore-Web

./: .gitignore  main.py  pyproject.toml  verification_output.txt
DB/: docker-compose.yml  init.sql
FE/: _footer.html  _navbar.html  account.html  admin-author-edit.html  admin-authors.html  admin-categories.html  admin-category-edit.html  admin-dashboard.html  admin-order-detail.html  admin-orders.html  admin-product-edit.html  admin-products.html  admin-publisher-edit.html  admin-publishers.html  admin-users.html  cart.html  category.html  checkout.html  index.html  login.html  order_edit.html  orders.html  password.html  product-detail.html  register.html  thank-you.html
FE/js/: cart.js  config.js  include.js  pagination.js
libs/mysql-lib/: pyproject.toml
libs/mysql-lib/src/mysql_lib/: __init__.py  client.py  crud.py  utils.py
libs/mysql-lib/src/tests/: test_mysql.py
routers/: auth.py
services/: admin.py  auth.py  orders.py  products.py  users.py
